Mon May 23 19:30:10 UTC 2011  Adam Mitz  <mitza@ociweb.com>

        * tests/DCPS/LargeSample/run_test.pl:

          Fixed some Perl errors, added "use strict" and cleaned up.

Mon May 23 18:14:50 UTC 2011  Adam Mitz  <mitza@ociweb.com>

        * tools/modeling/tests/modeling_tests.lst:

          ...and don't attempt to run RemoteInstHandles when Built-In Topics
          are not available in the build.

Mon May 23 16:29:07 UTC 2011  Adam Mitz  <mitza@ociweb.com>

        * configure:

          Allow --prefix argument to configure script, for use with
          "make install".

Mon May 23 16:00:55 UTC 2011  Adam Mitz  <mitza@ociweb.com>

        * tools/modeling/tests/RemoteInstHandles/RemoteInstHandles.mpc:

          This test requires Built-In Topics.

Mon May 23 15:15:24 UTC 2011  Adam Mitz  <mitza@ociweb.com>

        * tests/DCPS/Reconnect/Reconnect.mpc:
        * tests/DCPS/Reconnect/Reconnect_export.h:

          Create a library of generated code to work better
          with parallel builds.

        * tools/modeling/codegen/model/Service_T.h:
        * tools/modeling/codegen/model/Service_T.cpp:

          Use proper type for 'argv', matching the Entities class.

        * tools/modeling/plugins/org.opendds.modeling.sdk.model/xsl/traits_cpp.xsl:

          Generate ACE_TEXT() around string literals where needed.

        * tools/modeling/tests/setup.pl:

          Fix for the case where the 'bin' subdirectory of the plugin doesn't
          exist yet.

Fri May 20 20:03:26 UTC 2011  Adam Mitz  <mitza@ociweb.com>

        * tests/DCPS/LargeSample/pub_multicast.ini:
        * tests/DCPS/LargeSample/pub_udp.ini:
        * tests/DCPS/LargeSample/run_test.pl:
        * tests/DCPS/LargeSample/sub_multicast.ini:
        * tests/DCPS/LargeSample/sub_udp.ini:

          Use consistent logging and built-in topic settings for all of the
          transport types.

Fri May 20 12:46:44 UTC 2011  Don Hudson  <hudsond@ociweb.com>
